--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "laravel/framework": "5.2.*"
     },
     "require-dev": {
+        "cornford/googlmapper": "2.*",
+        "gloudemans/shoppingcart": "~1.3",
         "barryvdh/laravel-dompdf": "0.6.*",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
